<resources>
    <string name="welcome_to_whatsapp">Welcome to ChatApp</string>
    <string name="send">Send</string>
    <string name="read_policy">Read our Privacy Policy. Tap “Agree &amp; Continue” to accept the Terms of Service.</string>
    <string name="from_name">from\nCHATAPP</string>
    <string name="invalid_phone_error">Invalid phone number</string>
    <string name="blank_phone_number_error">Please enter the 10 digit phone number</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_edit_text_hint">- - - - - -</string>
    <string name="phone_edit_text_hint">\tEnter number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="ok">OK</string>
    <string name="set_your_status">Set your status</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="chatapp">ChatApp</string>
    <string name="add_profile_image">Add profile image</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_current_status">Please set your current status</string>
    <string name="storage_access_required_toast">Storage access is required to upload</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_group">New Group</string>
    <string name="add_group_name">Add group name</string>
    <string name="enter_your_group_name_here">Enter your group name here</string>
    <string name="group_name_empty_error">Group name cannot be empty</string>
    <string name="type_a_message">Type a message</string>
    <string name="john_doe">John Doe</string>
    <string name="tap_here_for_the_group_info">Tap here for the group info</string>
    <string name="app_name">ChatApp</string>
    <string name="add_participants">Add participants</string>
    <string name="save">save</string>
</resources>