<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whatsapp_chat_screen_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_group_name_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whatsapp_toolbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/group_name_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16.59dp"
            android:background="@null"
            android:src="@drawable/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/group_name_new_group_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/group_name_new_group_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/group_name_back_button"
            android:fontFamily="@font/pt_sans"
            android:paddingTop="4dp"
            android:text="@string/new_group"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/group_name_set_groupName_text_view"
            app:layout_constraintStart_toEndOf="@+id/group_name_back_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/group_name_set_groupName_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:fontFamily="@font/pt_sans"
            android:text="@string/add_group_name"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/group_name_back_button"
            app:layout_constraintTop_toBottomOf="@+id/group_name_new_group_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/group_name_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/whatsapp_view_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_group_name_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/guideline12"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@id/group_name_view"
        app:layout_constraintEnd_toStartOf="@+id/group_name_edit_text"
        app:layout_constraintStart_toEndOf="@+id/group_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_group_name_toolbar" />

    <EditText
        android:id="@+id/group_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/enter_your_group_name_here"
        android:textColor="@color/white"
        android:textColorHint="@color/whatsapp_edit_text_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleImageView2"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_group_name_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/group_name_view"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/group_name_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/done_icon"
        app:tint="@color/add_icon_floating_action_button_color"
        app:layout_constraintBottom_toBottomOf="@id/group_name_view"
        app:layout_constraintEnd_toEndOf="@id/group_name_view"
        app:layout_constraintTop_toBottomOf="@id/group_name_view" />


</androidx.constraintlayout.widget.ConstraintLayout>